<resources>
    <string name="app_name">All Document Reader</string>
    <string name="permanent_notification_text">Tap to return to All Document Reader</string>
    <string name="screenshot_notification_title">Screenshot Notification</string>
    <string name="screenshot_notification_text">You have taken a screenshot</string>
    <string name="need_all_file_permission">Need All File Permission</string>
    <string name="authorize">Authorize</string>
    <string name="no_permission">No Permission</string>
    <string name="need_storage_permission">Need Storage Permission</string>
    <string name="all_document">All Document</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="nav_header_text">View and read all\ndocument files on your\nmobile</string>
    <string name="all_document_reader">ALL DOCUMENT READER</string>
    <string name="all">ALL</string>
    <string name="pdf">PDF</string>
    <string name="document">DOC</string>
    <string name="xls">XLS</string>
    <string name="ppt">PPT</string>
    <string name="txt">TXT</string>
    <string name="other">Other</string>
    <string name="file">file</string>
    <string name="files">files</string>
    <string name="recent">Recent</string>
    <string name="favorite">Favorite</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="choose_theme_mode">Select Theme Mode</string>
    <string name="auto_mode">Auto mode</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="rate_text">We are a tiny team working very extremely to give you the best apps for free. Your 5-Star are better than anything in the world!</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="rate_now">RATE NOW</string>
    <string name="thanks_for_your_rate">Thanks for your review !</string>
    <string name="change_language">Change Language</string>
    <string name="filter">Filter</string>
    <string name="view_as">View As</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="sort_by">Sort By</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="order_by">Order By</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="apply">APPLY</string>
    <string name="title_all">ALL FILES</string>
    <string name="title_pdf">PDF FILES</string>
    <string name="title_document">WORD FILES</string>
    <string name="title_xls">EXCEL FILES</string>
    <string name="title_ppt">SLIDE FILES</string>
    <string name="title_txt">TXT FILES</string>
    <string name="title_other">OTHER FILES</string>
    <string name="ALL">ALL</string>
    <string name="PDF">PDF</string>
    <string name="WORD">WORD</string>
    <string name="EXCEL">EXCEL</string>
    <string name="SLIDE">SLIDE</string>
    <string name="TXT">TXT</string>
    <string name="OTHER">OTHER</string>
    <string name="file_name_not_null">File name cannot be empty!</string>
    <string name="file_name_update_failed">File rename failed, please try again!</string>
    <string name="file_name_update_success">File renamed successfully!</string>
    <string name="collect">Favorites</string>
    <string name="rename">Rename</string>
    <string name="shortcut">Shortcut</string>
    <string name="file_info">File Info</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sorry_find_no_file">Sorry, no results found!</string>
    <string name="title">Title</string>
    <string name="file_type">File Type</string>
    <string name="path">Path</string>
    <string name="last_modified">Last Modified</string>
    <string name="ok">OK</string>
    <string name="delete_dialog_text">Do you really want to delete this file?</string>
    <string name="delete_success">Delete success!</string>
    <string name="delete_failed">Delete failed!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="files_upper">Files</string>
    <string name="on_this_device">On This Device</string>
    <string name="browser_more_files">Browser more files</string>
    <string name="msg_token_fmt">Token FMT</string>

</resources>