<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_rename_dialog"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_info"
        android:textSize="20sp"
        android:textColor="@color/selected_tabLayout_color"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="@color/grey"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_document_name"
        android:layout_width="match_parent"
        android:textColor="@color/selected_tabLayout_color"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="实验三.doc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/file_type"
        android:textColor="@color/grey"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_document_type"
        android:layout_width="match_parent"
        android:textColor="@color/selected_tabLayout_color"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="实验三.doc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/path"
        android:textColor="@color/grey"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_document_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/selected_tabLayout_color"
        android:layout_marginTop="5dp"
        tools:text="实验三.doc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/size"
        android:textColor="@color/grey"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_document_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/selected_tabLayout_color"
        android:layout_marginTop="5dp"
        tools:text="实验三.doc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/last_modified"
        android:textColor="@color/grey"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_document_last_modified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/selected_tabLayout_color"
        android:layout_marginTop="5dp"
        tools:text="实验三.doc" />

    <android.widget.Button
        android:id="@+id/btn_document_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_bottom_dialog_button_background"
        android:text="@string/ok"
        android:textColor="@color/white"/>
</LinearLayout>