<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom_dialog">

    <TextView
        android:id="@+id/tv_bottom_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bottom_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@id/tv_bottom_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_bottom_dialog_title" />

    <TextView
        android:id="@+id/tv_bottom_dialog_view_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/view_as"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_dialog_title" />

    <com.example.alldocunemtreader.ui.common.BottomDialogRadioGroup
        android:id="@+id/bdrg_view_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/iv_bottom_dialog_cancel"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_dialog_view_method">

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/list"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_list"
            app:imgSrcSelected="@drawable/ic_sort_list_selected" />

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/grid"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_grid"
            app:imgSrcSelected="@drawable/ic_sort_grid_selected" />
    </com.example.alldocunemtreader.ui.common.BottomDialogRadioGroup>

    <TextView
        android:id="@+id/tv_bottom_dialog_sort_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sort_by"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/bdrg_view_method" />

    <com.example.alldocunemtreader.ui.common.BottomDialogRadioGroup
        android:id="@+id/bdrg_sort_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/iv_bottom_dialog_cancel"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_dialog_sort_method">

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/name"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_name"
            app:imgSrcSelected="@drawable/ic_sort_name_selected" />

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/date"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_date"
            app:imgSrcSelected="@drawable/ic_sort_date_selected" />

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/type"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_type"
            app:imgSrcSelected="@drawable/ic_sort_type_selected" />

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/size"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_size"
            app:imgSrcSelected="@drawable/ic_sort_size_selected" />
    </com.example.alldocunemtreader.ui.common.BottomDialogRadioGroup>

    <TextView
        android:id="@+id/tv_bottom_dialog_order_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/order_by"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/bdrg_sort_method" />

    <com.example.alldocunemtreader.ui.common.BottomDialogRadioGroup
        android:id="@+id/bdrg_order_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/iv_bottom_dialog_cancel"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_dialog_order_method">

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_asc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/asc"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_asc"
            app:imgSrcSelected="@drawable/ic_sort_asc_selected" />

        <com.example.alldocunemtreader.ui.common.BottomDialogRadioButton
            android:id="@+id/bdrb_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:background="@drawable/shape_bottom_dialog_item"
            app:backgroundSelected="@drawable/shape_bottom_dialog_item_selected"
            app:btnText="@string/desc"
            app:btnTextColor="@color/not_selected_color"
            app:btnTextColorSelected="@color/button_selected_color"
            app:imgSrc="@drawable/ic_sort_desc"
            app:imgSrcSelected="@drawable/ic_sort_desc_selected" />
    </com.example.alldocunemtreader.ui.common.BottomDialogRadioGroup>

    <android.widget.Button
        android:id="@+id/btn_bottom_dialog_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_bottom_dialog_button_background"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/iv_bottom_dialog_cancel"
        app:layout_constraintStart_toStartOf="@id/tv_bottom_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/bdrg_order_method" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_bottom_dialog_apply" />
</androidx.constraintlayout.widget.ConstraintLayout>