<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:background="@drawable/shape_rename_dialog"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_rename_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rename"
        android:textColor="@color/selected_tabLayout_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.example.alldocunemtreader.ui.common.ClearableEditText
        android:id="@+id/cet_rename_dialog_text"
        style="@style/CustomEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rename_dialog_edittext"
        android:padding="10dp"
        android:textColor="@color/selected_tabLayout_color"
        android:textSize="15sp"
        tools:text="你好你好你好你好你好你好你好你好" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/btn_rename_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/shape_rename_dialog_edittext"
            android:text="@string/cancel"
            android:textColor="@color/selected_tabLayout_color" />

        <android.widget.Button
            android:id="@+id/btn_rename_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rename_dialog_edittext"
            android:text="@string/confirm"
            android:textColor="@color/selected_tabLayout_color" />

    </LinearLayout>


</LinearLayout>