<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom_dialog">

    <ImageView
        android:id="@+id/iv_file_details_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_item_file_doc" />

    <TextView
        android:id="@+id/tv_file_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_file_details_time_and_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_file_details_icon"
        tools:text="实验五.doc" />

    <TextView
        android:id="@+id/tv_file_details_time_and_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_file_details_icon"
        app:layout_constraintTop_toBottomOf="@id/iv_file_details_icon"
        tools:text="06-06-2024 7:31 PM | 140.0 B" />

    <View
        android:id="@+id/v_dividing_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/vague_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_file_details_time_and_size" />

    <!--  ****************下面的****************  -->
    <ImageButton
        android:id="@+id/ib_file_details_favorite"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_option_menu_favorite_selector"
        app:layout_constraintEnd_toEndOf="@id/gl_quarter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_dividing_line"
        tools:background="@color/very_light_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/collect"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ib_file_details_favorite"
        app:layout_constraintStart_toStartOf="@id/ib_file_details_favorite"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_favorite" />


    <ImageButton
        android:id="@+id/ib_file_details_rename"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/very_light_blue"
        android:src="@drawable/ic_option_menu_rename"
        app:layout_constraintEnd_toEndOf="@id/gl_half"
        app:layout_constraintStart_toStartOf="@id/gl_quarter"
        app:layout_constraintTop_toTopOf="@id/v_dividing_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/rename"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ib_file_details_rename"
        app:layout_constraintStart_toStartOf="@id/ib_file_details_rename"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_rename" />

    <ImageButton
        android:id="@+id/ib_file_details_shortcut"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/very_light_blue"
        android:src="@drawable/ic_option_menu_create_shortcut"
        app:layout_constraintEnd_toEndOf="@id/gl_three_quarters"
        app:layout_constraintStart_toStartOf="@id/gl_half"
        app:layout_constraintTop_toTopOf="@id/v_dividing_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shortcut"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ib_file_details_shortcut"
        app:layout_constraintStart_toStartOf="@id/ib_file_details_shortcut"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_shortcut" />

    <ImageButton
        android:id="@+id/ib_file_details_info"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/very_light_blue"
        android:src="@drawable/ic_option_menu_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_three_quarters"
        app:layout_constraintTop_toTopOf="@id/v_dividing_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/file_info"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ib_file_details_info"
        app:layout_constraintStart_toStartOf="@id/ib_file_details_info"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_info" />

    <ImageButton
        android:id="@+id/ib_file_details_delete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/very_light_blue"
        android:src="@drawable/ic_option_menu_delete"
        app:layout_constraintEnd_toEndOf="@id/gl_quarter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_favorite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/delete"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ib_file_details_delete"
        app:layout_constraintStart_toStartOf="@id/ib_file_details_delete"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_delete" />


    <ImageButton
        android:id="@+id/ib_file_details_share"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/very_light_blue"
        android:src="@drawable/ic_option_menu_share"
        app:layout_constraintEnd_toEndOf="@id/gl_half"
        app:layout_constraintStart_toStartOf="@id/gl_quarter"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_rename" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/share"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/ib_file_details_share"
        app:layout_constraintStart_toStartOf="@id/ib_file_details_share"
        app:layout_constraintTop_toBottomOf="@id/ib_file_details_share" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_share" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_quarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_three_quarters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>